tests/nightly/misc/compile_fail/ambiguous_assure.stderr
error: could not find an unambiguos call to apply this to
  --> $DIR/ambiguous_assure.rs:15:5
   |
15 |     #[assure("baz", reason = "is baz")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: try moving it closer to the call it should apply to

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/ambiguous_assure.rs:16:5
   |
3  |   #[pre("baz")]
   |  _______-
4  | | fn foo() -> [u8; 8] {
5  | |     [0; 8]
6  | | }
   | |_- defined here
...
16 |       foo()[bar()];
   |       ^^^-- supplied 0 arguments
   |       |
   |       expected 1 argument

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/ambiguous_assure.rs:16:11
   |
8  |   #[pre("baz")]
   |  _______-
9  | | fn bar() -> usize {
10 | |     0
11 | | }
   | |_- defined here
...
16 |       foo()[bar()];
   |             ^^^-- supplied 0 arguments
   |             |
   |             expected 1 argument
